Updated backend for product category[use ID now], Updated UI in productions and sales

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -435,7 +435,7 @@ table, th, td {
   max-height: 625px !important;
 }
 
-.table-size-materialcount {
+.table-size-fixed {
   height: 625px !important;
 }
 
