--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -170,10 +170,10 @@
                     <thead class="table-header">
                         <tr>
                             <th class = "col-1">Component ID</th>
-                            <th class = "col-1">Product name</th>
-                            <th class = "col-2">Components</th>
-                            <th class = "col-2">Created by</th>
-                            <th class = "col-1">Created date</th>
+                            <th class = "col-2">Product name</th>
+                            <th>Components</th>
+                            <th>Created by</th>
+                            <th>Created date</th>
                             <th class = "col-1">Status</th>
                             <th class = "col-1">Action</th>               
                         </tr>
