--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -188,16 +188,16 @@
                 <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th class = "col-1">Material ID</th>
-                            <th class = "col-1">Material Name</th>
-                            <th class = "col-2">Description</th>
-                            <th class = "col-1">Category</th>
-                            <th class = "col-1">Vendor ID</th>
-                            <th class = "col-1">Price</th>
-                            <th class = "col-2">Created by</th>
-                            <th class = "col-1">Created date</th>
+                            <th>Material ID</th>
+                            <th>Material Name</th>
+                            <th>Description</th>
+                            <th>Category</th>
+                            <th>Vendor ID</th>
+                            <th>Price</th>
+                            <th>Created by</th>
+                            <th>Created date</th>
                             <th class = "col-1">Status</th>
-                            <th class = "col-1">Action</th>               
+                            <th class = "col-1"></th>               
                         </tr>
                     </thead>
                         
