--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -21,6 +21,7 @@ $(document).ready(function () {
       <td><div class="custom-loader"></div></td>
       <td><div class="custom-loader"></div></td>
       <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
     </tr>`;
 
     const tbody = $('#products-dataTable tbody');
@@ -36,7 +37,7 @@ $(document).ready(function () {
         console.log(dataRow);
         productid = dataRow[0];
         imagedescription = dataRow[1];
-        status = dataRow[7]
+        status = dataRow[8]
     }) 
 
     $(document).on('click', '#editBtn', function(){
@@ -164,10 +165,9 @@ $(document).ready(function () {
     $(document).on('click', '#addBtn', function () {
         let description = $('#description').val();
         let price = $('#price').val();
-        let category = $('#category').val();
+        let category = $('#categoryid').val();
         let barcode = $('#barcode').val();
         let productimage = base64String
-
         var message = "";
 
         if (description == '') { message += 'Description, ' }
@@ -179,6 +179,7 @@ $(document).ready(function () {
             warning('Required', `Please fill up ${message}`);
         }
         else {
+            const formattedprice = parseFloat(price.replace(/₱|,/g, ''));
             $.ajax({
                 type: 'GET',
                 url: '/branch/load',
@@ -194,7 +195,7 @@ $(document).ready(function () {
                         type: 'POST',
                         url: '/products/save',
                         data: {
-                            price: price,
+                            price: formattedprice,
                             category: category,
                             barcode: barcode,
                             description: description,
@@ -231,7 +232,7 @@ $(document).ready(function () {
     })
 
     function populateProductsTable(data) {
-        console.log(data);
+        console.log("Products Data: ", data);
         const tableBody = $('#products-dataTable tbody');
         tableBody.empty();
 
@@ -255,24 +256,23 @@ $(document).ready(function () {
                         <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
                 }
                 const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
-                const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';
-                
-                const numericValue = parseFloat(item.price.replace(/₱|,/g, ''));
+                const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';   
 
                 const tr = $('<tr>').append(
                     $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
                     $('<td>', {
                         html: item.productimage
-                            ? `<img src="data:image/png;base64,${item.productimage}" alt="Product Image" class="product-image" style="max-width: 150px; max-height: 100px;"/>`
+                            ? `<img src="data:image/png;base64,${item.productimage}" alt="Product Image" class="product-image" style="max-width: 100px; max-height: 85px;"/>`
                             : 'No Image',
                         'data-label': 'Product Image',
                     }),
                     $('<td>', { text: item.description, 'data-label': 'Description', class: 'custom-mobile-align' }),
                     $('<td>', {
-                        text: isNaN(numericValue) ? 'N/A' : formatCurrency(numericValue),
+                        text: formatCurrency(item.price),
                         'data-label': 'Price',
                         class: 'custom-mobile-align'
                     }),
+                    $('<td>', { text: item.category, 'data-label': 'Category', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
@@ -331,19 +331,24 @@ $(document).ready(function () {
             success: function (result) {
                 var data = result.data;
                 console.log(data)
-                $.each(data, function (key, item) {
-                    if (item.status == "ACTIVE") {
-                        var listItem = $('<li></li>')
-                        .text(item.categoryname);
-                        console.log("category name: ", item.categoryname)
-                        $('.customdropdown-menu').append(listItem);
-                    }
-                });
-                $('.customdropdown-menu li').click(function () {
-                    var selectedOption = $(this).text();
-                    $('.select span').text(selectedOption); 
-                    $('input[id="category"]').val(selectedOption);
-                });
+                $.each(data, (key, item) => {
+                        let categoryname = item.categoryname;
+                        let categoryid = item.categorycode;
+
+                        var listItem = $("<li></li>")
+                            .text(categoryname)
+                            .data("categoryid", categoryid);
+
+                        $(".categorylist").append(listItem);
+                    });
+
+                    $(".categorylist").on("click", "li", function () {
+                        var selectedOption = $(this).text();
+                        var selectedcategoryId = $(this).data("categoryid");
+
+                        $("#selectedcategory").text(selectedOption);
+                        $("#categoryid").val(selectedcategoryId).change();
+                    });
 
             },
             error: function (err) {
