--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -101,10 +101,10 @@
                 <table class="table table-bordered custom-mobile-table" id="access-table" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th class = "col-1">Access Code</th>
-                            <th class = "col-3">Access Name</th>
-                            <th class = "col-2">Created by</th>
-                            <th class = "col-2">Created date</th>
+                            <th>Access Code</th>
+                            <th>Access Name</th>
+                            <th>Created by</th>
+                            <th>Created date</th>
                             <th class = "col-1">Status</th>
                             <th class = "col-1"></th>               
                         </tr>
@@ -112,7 +112,7 @@
 
                     <tbody>
                     </tbody>
-                </table>
+                </table> 
             </div>
         </div>
     </div>
