--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -58,7 +58,7 @@
                     <div class="card-body extend">
                         <div class="row">
                             <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size-materialcount">
+                                <div class="table-responsive scrollable-table-container-sm table-size-fixed">
                                     <table class="table table-bordered custom-mobile-table" id="materials-datatable"
                                         width="100%" cellspacing="10">
                                         <thead class="table-header">
@@ -141,14 +141,14 @@
                     cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th class="col-1">Count ID</th>
-                            <th class="col-2">Material Name</th>
-                            <th class="col-2">Quantity</th>
-                            <th class="col-1">Unit</th>
-                            <th class="col-3">Created By</th>
-                            <th class="col-1">Created Date</th>
+                            <th>Count ID</th>
+                            <th>Material Name</th>
+                            <th>Quantity</th>
+                            <th>Unit</th>
+                            <th>Created By</th>
+                            <th>Created Date</th>
                             <th class="col-1">Status</th>
-                            <th class="col-1">Action</th>
+                            <th class="col-1"></th>
                         </tr>
                     </thead>
 
