--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -13,7 +13,7 @@
                     <div class="card-body extend">
                         <div class="row">
                             <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size">
+                                <div class="table-responsive scrollable-table-container-sm table-size-fixed">
                                     <table class="table table-bordered custom-mobile-table" id="products-datatable"
                                         width="100%" cellspacing="10">
                                         <thead class="table-header">
