--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -188,20 +188,20 @@
             <table class="table table-bordered custom-mobile-table" id="productprice-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Product Price Code</th>
-                        <th class = "col-1">Product Code</th>
-                        <th class = "col-1">Description</th>
-                        <th class = "col-1">Barcode</th>
-                        <th class = "col-1">Product Image</th>
-                        <th class = "col-1">Price</th>
-                        <th class = "col-1">Category</th>
-                        <th class = "col-1">Previous Price</th>   
-                        <th class = "col-1">Price Change</th>   
-                        <th class = "col-1">Price Change Date</th>   
-                        <th class = "col-1">Created By</th>   
-                        <th class = "col-1">Created Date</th>     
+                        <th>Product Price Code</th>
+                        <th>Product Code</th>
+                        <th>Description</th>
+                        <th>Barcode</th>
+                        <th>Product Image</th>
+                        <th>Price</th>
+                        <th>Category</th>
+                        <th>Previous Price</th>   
+                        <th>Price Change</th>   
+                        <th>Price Change Date</th>   
+                        <th>Created By</th>   
+                        <th>Created Date</th>     
                         <th class = "col-1">Status</th>    
-                        <th class = "col-1">Action</th>        
+                        <th class = "col-1"></th>        
                     </tr>
                 </thead>
                     
