--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -81,14 +81,14 @@
                     <div class="card-body extend">
                         <div class="row">
                             <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size">
+                                <div class="table-responsive scrollable-table-container-sm table-size-fixed">
                                     <table class="table table-bordered custom-mobile-table" id="components-dataTable" width="100%" cellspacing="10">
                                         <thead class="table-header">
                                             <tr>
                                                 <th class = "col-2">Material Name</th>
                                                 <th class = "col-1">Material ID</th>
                                                 <th class = "col-1">Quantity</th> 
-                                                <th class = "col-1">Cost</th>  
+                                                <th class = "col-1">Total Cost</th>  
                                                 <th class = "col-1">Unit</th> 
                                                 <th class = "col-1">Action</th>    
                                             </tr>
