--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -246,14 +246,16 @@ $(document).ready(function () {
         } else {
             data.forEach(item => {
                 let action = '';
-                if (item.status === 'ACTIVE') {
-                    action = `
-                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
-                        <span class="editbutton" id="inactiveBtn"><i class="fas fa-eye-slash" style="color: rgb(99, 115, 129);"></i></span>`;
-                } else if (item.status === 'INACTIVE') {
-                    action = `
-                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
-                        <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
+                if ('<%= accesstype%>' == "Owner" || '<%= accesstype%>' == "Manager"){
+                    if (item.status === 'ACTIVE') {
+                        action = `
+                            <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                            <span class="editbutton" id="inactiveBtn"><i class="fas fa-eye-slash" style="color: rgb(99, 115, 129);"></i></span>`;
+                    } else if (item.status === 'INACTIVE') {
+                        action = `
+                            <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                            <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
+                    }
                 }
                 const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
                 const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';   
