[productinventory]-[Added column in DB pi_category foreign key to mc_category]-[updated ui of productinventory]

--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -118,6 +118,7 @@
                         <tr>
                             <th>Inventory ID</th>
                             <th>Product</th>
+                            <th>Category</th>
                             <th>Branch ID</th>
                             <th>Quantity</th>
                         </tr>
